--- a/src/shared/material-ui-colors.scss
+++ b/src/shared/material-ui-colors.scss
@@ -18,15 +18,20 @@ $material-color-deep-orange-700: #e64a19;
 $material-color-deep-orange-800: #d84315;
 $material-color-deep-orange-900: #bf360c;
 $material-color-deep-orange: #ff5722;
+
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
 $material-color-green-900: #1b5e20;
+
 $material-color-orange-100: #ffe0b2;
 $material-color-orange-200: #ffcc80;
 $material-color-orange-300: #ffb74d;
+
+
+$material-color-orange-700: #f57c00;
 $material-color-orange-800: #ef6c00;
 $material-color-orange-900: #e65100;
-$material-color-orange-900: #e65100;
+
 $material-color-pink-700: #c2185b;
 $material-color-pink-800: #ad1457;
 $material-color-pink-900: #880e4f;
@@ -34,6 +39,7 @@ $material-color-pink: #e91e63;
 $material-color-purple-700: #7b1fa2;
 $material-color-purple-800: #6a1b9a;
 $material-color-purple-900: #4a148c;
+
 $material-color-red-100: #ffcdd2;
 $material-color-red-200: #ef9a9a;
 $material-color-red-700: #d32f2f;
