--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -1,4 +1,3 @@
-$material-color-orange-900: #e65100;
 
 $material-color-blue: #2196f3;
 $material-color-blue-50: #e3f2fd;
@@ -23,6 +22,7 @@ $material-color-red-700: #d32f2f;
 $material-color-red-800: #c62828;
 $material-color-red-900: #b71c1c;
 
+$material-color-orange-700: #f57c00;
 $material-color-orange-800: #ef6c00;
 $material-color-orange-900: #e65100;
 
@@ -33,3 +33,8 @@ $material-color-deep-orange-900: #bf360c;
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
 $material-color-green-900: #1b5e20;
+
+$tertiary-blue-700: #111;
+$tertiary-blue-800: #112;
+$tertiary-blue-900: #114;
+$tertiary-blue: $tertiary-blue-800;
