--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -1,6 +1,7 @@
-@use "./raw-colors.scss";
+@use "./raw-colors.scss" as raw-colors;
 
 $secondary: raw-colors.$material-color-orange-800;
+$primary: raw-colors.$tertiary-blue;
 
 $embedBorderColor: $secondary;
-
+$embedPrimaryLinkColor: raw-colors.$material-color-orange-700;
