--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.canvas-wrapper, .markdown-source-view {
+:is(.canvas-wrapper, .markdown-source-view) {
 
   .cm-preview-code-block.cm-embed-block.markdown-rendered {
     .internal-query {
@@ -57,22 +57,17 @@
       max-height: 30vmin;
     }
   }
-  // .markdown-source-view.mod-cm6.is-readable-line-width .markdown-embed .markdown-embed-link[aria-label="Open link"] {
-  //   padding-top: 1em;
-  //   margin-right: 1em;
-  // }
+
   .markdown-embed  {
     .markdown-embed-link[aria-label="Open link"] {
       padding-top: 1em;
       margin-right: 1em;
       // pointer-events: none;
     }
-  
-  
   }
 
-  /*  # OLK */
-  /** :: hide transcluded headers for olk (omit linkage) **/
+  // # OLK 
+  // hide transcluded headers for olk (omit linkage)
   .internal-embed[alt*="olk"].markdown-embed,
   .internal-embed[alt*="olk"].markdown-embed {
     .markdown-preview-sizer > div:nth-of-type(3) {
@@ -91,16 +86,6 @@
       display: none;
     }
   }
- .markdown-embed-content {
-   .markdown-preview-view.markdown-rendered {
-    .block-language-dataviewjs{
-      // border: 2px solid shared.$embedBorderColor;
-      // padding-left: .5em;
-    }
-
-  }
- }
-
 }
 
 /** WORKING EMBED CONTAINER **/
