--- a/src/table.scss
+++ b/src/table.scss
@@ -12,7 +12,7 @@
     >.cm-content {
 
       table {
-        outline: 4px solid $material-color-purple-700;
+        // outline: 4px solid $material-color-purple-700;
         background: transparent;
       }
     }
