--- a/src/multi-colored-folders.scss
+++ b/src/multi-colored-folders.scss
@@ -23,7 +23,18 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
     .nav-file {
       .nav-file-title {
         padding-left: 5px;
-
+        // line-height: 1.4em;
+        // max-height: 3.2em;
+        &:after {
+          width: 80%;
+          border: 1px solid $material-color-red-900;
+          position: absolute;
+          content: "";
+          bottom: 1px;
+          display: block;
+          transform: translate(-50%, 0);
+          left: 50%;
+        }
         &.is-active {
           /* active file increase font size and removes normal highlight marker */
           background-color: var(--theme-color-translucent-1);
@@ -31,8 +42,8 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
 
         .nav-file-title-content {
           color: var(--FoldText);
-          line-height: 1.4em;
-          max-height: 3em;
+          line-height: 1.5em;
+          max-height: 3.2em;
           white-space: pre-wrap;
           text-overflow: ellipsis;
         }
