Consistent colors on links even on popover

--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -22,6 +22,11 @@ $material-color-red-700: #d32f2f;
 $material-color-red-800: #c62828;
 $material-color-red-900: #b71c1c;
 
+$material-color-orange: #ff9800;
+// $material-color-orange-400: #ffa726;
+
+// $material-color-orange-500: $material-color-orange;
+$material-color-orange-600: #fb8c00;
 $material-color-orange-700: #f57c00;
 $material-color-orange-800: #ef6c00;
 $material-color-orange-900: #e65100;
