--- a/src/popover.scss
+++ b/src/popover.scss
@@ -1,3 +1,4 @@
+@use './shared/index.scss' as SHARED;
 /* # API specific Feature To ONLY TAKE API BETWEEN = and --- */
 /* NAME: SELECTED-TRANSCLUSION-PREVIEW CSS SNIPPET */
 
@@ -33,6 +34,20 @@
         div:has(> h1[data-heading^='---']) {
           display: none;
         }
+
+        ul.has-list-bullet {
+          li:nth-child(even) {
+            color: var(--material-color-deep-purple-200);
+
+          }
+          li:nth-child(even) {
+            > a {
+              color: SHARED.$embedPrimaryLinkColor;
+            }
+          }
+        }
+
+
       }
     }
   }
