--- a/src/shared/material-ui-colors.scss
+++ b/src/shared/material-ui-colors.scss
@@ -1,4 +1,6 @@
 // $material-color-red: #f44336;
+// this is only reference material.
+// i want to deprecate this to raw-colors.
 $material-color-blue-100: #bbdefb;
 $material-color-blue-200: #90caf9;
 $material-color-blue-300: #64b5f6;
@@ -23,9 +25,14 @@ $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
 $material-color-green-900: #1b5e20;
 
+$material-color-orange: #ff9800;
 $material-color-orange-100: #ffe0b2;
 $material-color-orange-200: #ffcc80;
 $material-color-orange-300: #ffb74d;
+
+$material-color-orange-400: #ffa726;
+$material-color-orange-500: $material-color-orange;
+$material-color-orange-600: #fb8c00;
 
 
 $material-color-orange-700: #f57c00;
