--- a/src/multi-colored-folders.scss
+++ b/src/multi-colored-folders.scss
@@ -13,9 +13,8 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
   .nav-folder-title {
     .nav-folder-title-content {
       white-space: pre-wrap;
-    }
   }
-}
+}}
 
 .nav-folder.mod-root {
   border-radius: 0.5em 2em 0.4em 0.2em;
