--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -1,4 +1,3 @@
-
 $material-color-blue: #2196f3;
 $material-color-blue-50: #e3f2fd;
 $material-color-blue-100: #bbdefb;
@@ -43,3 +42,7 @@ $tertiary-blue-700: #111;
 $tertiary-blue-800: #112;
 $tertiary-blue-900: #114;
 $tertiary-blue: $tertiary-blue-800;
+
+$material-color-brown-700: #5d4037;
+$material-color-brown-800: #4e342e;
+$material-color-brown-900: #3e2723;
