--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -8,3 +8,6 @@ $embedBorderColor: $secondary;
 
 $embedPrimaryLinkColor: raw-colors.$material-color-orange-700;
 $accentAlt: raw-colors.$material-color-brown-900;
+
+$primaryAlt: raw-colors.$material-color-purple-a100;
+// :skull: --secondary: var(--material-color-purple-a100);
