--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -46,3 +46,11 @@ $tertiary-blue: $tertiary-blue-800;
 $material-color-brown-700: #5d4037;
 $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
+
+$material-color-purple-700: #7b1fa2;
+$material-color-purple-800: #6a1b9a;
+$material-color-purple-900: #4a148c;
+$material-color-purple-a100: #ea80fc;
+$material-color-purple-a200: #e040fb;
+$material-color-purple-a400: #d500f9;
+$material-color-purple-a700: #a0f;
