Add new wallpaper

--- a/src/wallpapers.scss
+++ b/src/wallpapers.scss
@@ -17,7 +17,10 @@
   /* ## Cozy city alley */
   /* --mm-image: url("https://i.redd.it/5mqp7trvxov51.jpg"); */
   /* ## Cozy 1D1 */
---mm-image: url(https://wallpapercave.com/wp/wp6049353.jpg); 
+// --mm-image: url(https://wallpapercave.com/wp/wp6049353.jpg); 
+
+// # Abstract wallpaper
+--mm-image: url(https://i.redd.it/f20upwwdrzub1.png);
 
   // # Sunrises
   /* Kansas Sunrise */
