Use shared colors in status bar

--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -1,3 +1,5 @@
+// All colors without the numbers are primary.
+
 $material-color-blue: #2196f3;
 $material-color-blue-50: #e3f2fd;
 $material-color-blue-100: #bbdefb;
