--- a/src/statusbar.scss
+++ b/src/statusbar.scss
@@ -1,19 +1,30 @@
 // source: https://github.com/zcysxy/Obsidian-Terminal-Theme/blob/main/theme.css
 
-
+@use "./shared/index.scss" as shared;
 /* STATUS BAR */
 .status-bar {
   --status-bar-height: 21px;
-  --the-color: var(--material-color-orange-700);
-  --the-background-color: var(--tertiary-blue-800);
+  --the-color: #{shared.$secondaryAlt};
+  --the-background-color: #{shared.$primary};
   --status-bar-radius: 0;
-  
+
   justify-content: flex-end;
   gap: 0px;
   padding: 0;
   border-left: none;
   border-top: 1px solid var(--the-color);
   background-color: var(--the-background-color) !important;
+
+  &:after {
+    content: "";
+    position: absolute;
+    border-top: 2.5px solid #f57c00;
+    border-top-left-radius: 28%;
+    left: -21px;
+    top: -1px;
+    height: 0.6em;
+    width: 2em;
+  }
 
   > div.status-bar-item {
     border-radius: 0;
@@ -30,10 +41,11 @@
 
     &:after {
       content: "";
-      border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
+      border-top: calc(1 * var(--status-bar-height)) solid
+        var(--status-bar-background);
       // border-bottom: calc(0.5 * var(--status-bar-height)) solid var(--status-bar-text-color);
       // border-left: calc(0.5 * var(--status-bar-height)) solid transparent;
-      border-right: calc(1* var(--status-bar-height)) solid transparent;
+      border-right: calc(1 * var(--status-bar-height)) solid transparent;
       margin-left: 5px;
       background-color: var(--status-bar-text-color);
     }
@@ -50,8 +62,6 @@
     --status-bar-background: var(--the-background-color);
   }
 
-
-
   > .status-bar-item:not(:last-child):before {
     content: "";
     position: absolute;
@@ -61,24 +71,24 @@
     height: 0;
     border-top: calc(0.5 * var(--status-bar-height) - 1px) solid transparent;
     border-bottom: calc(0.5 * var(--status-bar-height)) solid transparent;
-    border-left: calc(0.5 * var(--status-bar-height)) solid var(--the-background-color);
+    border-left: calc(0.5 * var(--status-bar-height)) solid
+      var(--the-background-color);
     background-color: var(--the-color);
   }
 
-
-  > .status-bar-item:is(:first-child):before {
-    content: "";
-    position: relative;
-    top: -1.3px;
-    height: calc(.5 * var(--status-bar-height) - 1);
-    width: calc(.5 * var(--status-bar-height) - 1);
-    left: -26px;
-    border-top: calc(1 * var(--status-bar-height)) solid var(--status-bar-background);
-    border-left: calc(1 * var(--status-bar-height)) solid var(--status-bar-text-color);
-    border-bottom: none;
-    clip-path: polygon(100% 0, 0 0%, 100% 100%);
+  > .status-bar-item:is(:first-child) {
+    &:before {
+      content: "";
+      position: relative;
+      top: -1.3px;
+      height: calc(0.5 * var(--status-bar-height) - 1);
+      width: calc(0.5 * var(--status-bar-height) - 1);
+      left: -26px;
+      border-top: calc(1 * var(--status-bar-height)) solid shared.$primary;
+      border-left: calc(1 * var(--status-bar-height)) solid
+        var(--status-bar-text-color);
+      border-bottom: none;
+      clip-path: polygon(100% 0, 0 0%, 100% 100%);
+    }
   }
 }
-
-
-
